2006-11-04  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/search.c: Fix pressing enter to search from the Find dialog.


2006-11-03  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/msgwindow.c:
   Don't set error indicators when clicking on an error message if the
   document has been modified.
 * src/notebook.c: Focus the current document after clicking on a tab.
 * src/utils.c, src/keybindings.c, src/callbacks.c, src/sci_cb.c,
   src/sciwrappers.c, src/search.c, src/sciwrappers.h, src/document.c,
   src/document.h:
   Scroll matching selection to 1/3 of the view when searching.
   Add sci_scroll_to_line(); remove sci_goto_line_scroll().
   Show 'not found' message on status bar also when enter is pressed in
   the search bar.


2006-11-02  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c, src/dialogs:
   Run set includes build dialogs for LaTeX files modally, too.


2006-11-02  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, data/filetypes.perl, data/filetypes.pascal,
   data/filetypes.sh, data/filetypes.makefile, data/filetypes.ruby,
   data/filetypes.tcl:
   Make all remaining 0xff0000 comment styles darker using a common
   default comment style.
   Add some other generic styles (used only by C-like filetypes for
   now).


2006-11-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/search.c: Changed tooltip of checkbox "Close dialog" to be more
                 descriptive.
 * src/keybindings.c: Changed keybinding for Print to Ctrl+P.
 * scintilla/LexBash.cxx: Fixed wrong detection of some words.


2006-11-01  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/document.c: Prevent possible invalid memory read.
 * src/ui_utils.h, src/search.c, src/search.h, src/ui_utils.c,
   src/callbacks.c:
   Add Find Previous, Find All in File/Session buttons to the Find
   dialog.
   Move Find Usage code from on_find_usage1_activate to search.c.
   Add ui_button_new_with_image(), ui_hbutton_box_copy_layout().