@@ -8,24 +8,23 @@ D=*.d;*.di;
 Java=*.java;
 Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 ASM=*.asm;
-Fortran=*.f;*.f77;*.f90;*.f95;*.for;*.ftn;
-Ferite=*.fe;
+Fortran=*.f;*.for;*.ftn;*.f77;*.f90;*.f95;
 CAML=*.ml;*.mli;
 Perl=*.pl;*.perl;*.pm;*.agi;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Python=*.py;*.pyw;
 Ruby=*.rb;*.rhtml;
 Tcl=*.tcl;*.tk;*.wish;
+Ferite=*.fe;
 Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;
-Make=*.mak;*.mk;Makefile*;makefile*;
-XML=*.xml;*.sgml;
+Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
+XML=*.xml;*.sgml;*.xsl;*.xslt;
 Docbook=*.docbook;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
 CSS=*.css;
 SQL=*.sql;
 LaTeX=*.tex;*.sty;*.idx;
 O-Matrix=*.oms;
-Conf=*.conf;*.ini;config;*rc;*.cfg;
 Diff=*.diff;*.patch;
+Conf=*.conf;*.ini;config;*rc;*.cfg;
 None=*;
-
